--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,8 +23,11 @@ builds:
       - 5
       - 6
       - 7
+    gomips:
+      - softfloat
     ldflags:
       - -w -s -X main.ApplicationVersion={{.Version}}
+    mod_timestamp: '{{ .CommitTimestamp }}'
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     replacements:
@@ -58,6 +61,7 @@ dockers:
     goarm: ''
     image_templates:
       - "jlentink/go-transip-dyndns:{{ .Tag }}-amd64"
+      - "jlentink/go-transip-dyndns:latest"
     skip_push: false
     dockerfile: Dockerfile
   -
